fix: In Autocomplete client name field, bank name field, card name field the bilking cursor is too small to visible by user

--- a/src/app/transactions/AddDeposit.scss
+++ b/src/app/transactions/AddDeposit.scss
@@ -87,7 +87,7 @@
     background: var(--input);
     border: 1px solid var(--border);
     border-radius: var(--radius-xl);
-    padding: 6px 12px;
+    padding: 0px 6px;
     display: flex;
     align-items: center;
     gap: 6px;
@@ -142,7 +142,6 @@
     background: transparent;
     border: none;
     outline: none;
-    padding: 0;
     margin: 0;
     box-shadow: none;
 
