--- a/src/app/transactions/AddWithdraw.scss
+++ b/src/app/transactions/AddWithdraw.scss
@@ -93,7 +93,7 @@
     background: var(--input);
     border: 1px solid var(--border);
     border-radius: var(--radius-xl);
-    padding: 6px 12px;
+    padding: 0px 6px;
     display: flex;
     align-items: center;
     gap: 6px;
@@ -148,7 +148,6 @@
     background: transparent;
     border: none;
     outline: none;
-    padding: 0;
     margin: 0;
     box-shadow: none;
 
